[FIX] update sonarqube install plugin destination directory not exist

--- a/manifests/values/sonarqube.yaml
+++ b/manifests/values/sonarqube.yaml
@@ -15,3 +15,8 @@ ingress:
   enabled: true
 sonarqubePassword: "password"
 sonarqubeUsername: admin
+
+plugins:
+  enabled: true
+  commandOverride: |
+    mkdir -p /bitnami/sonarqube/extensions/plugins
