--- a/manifests/values/sonarqube.yaml
+++ b/manifests/values/sonarqube.yaml
@@ -19,4 +19,5 @@ sonarqubeUsername: admin
 plugins:
   enabled: true
   commandOverride: |
+    mkdir -p /opt/bitnami/sonarqube/data
     mkdir -p /bitnami/sonarqube/extensions/plugins
